v2.6.0